--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -28,6 +28,7 @@
 
   &--review {
     display: flex;
+    flex: 0 0 auto;
     flex-flow: column;
     float: left;
     margin-right: 2rem;
@@ -43,11 +44,19 @@
   .review-image {
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 10rem;
+    min-height: 10rem;
     width: 100%;
     &.instagram_lizelleg {
       background-image: url("../../img/reviews/instagram_lizelleg.jpg");
       background-position: 0 -3.5rem;
+    }
+    &.instagram_shekira {
+      background-image: url("../../img/reviews/instagram_shekira.jpg");
+      background-position: 0 -4.5rem;
+    }
+    &.twitter_uxjw {
+      background-image: url("../../img/reviews/twitter_uxjw.jpg");
+      background-position: 0 -5.5rem;
     }
   }
 
@@ -55,6 +64,7 @@
   .review-text {
     line-height: 1.2rem;
     margin: 0;
+    overflow: hidden;
 
     .text-instagram, &.text-instagram, .text-instagram a, &.text-instagram a { color: $c-instagram; }
     .text-twitter, &.text-twitter, .text-twitter a, &.text-twitter a { color: $c-twitter; }
@@ -86,6 +96,7 @@
       margin-right: 0.2rem;
       width: 20px;
       &.instagram-logo { background-image: url("../../img/reviews/instagram-logo.png"); }
+      &.twitter-logo { background-image: url("../../img/reviews/twitter-logo.png"); }
     }
   }
 }
